Tests unitarios finalizados. Limpieza de código basada en advertencias de SonarLint